eliminar accent - videos ok

--- a/dia3.html
+++ b/dia3.html
@@ -54,127 +54,127 @@
       <div class="images-gallery">
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-01.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-01.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-02.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-02.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-03.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-03.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-04.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-04.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-05.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-05.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-06.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-06.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-07.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-07.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-08.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-08.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-09.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-09.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-10.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-10.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-12.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-12.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-14.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-14.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-17.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-17.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-20.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-20.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-21.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-21.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-23.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-23.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-26.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-26.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-29.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-29.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-30.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-30.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-31.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-31.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-36.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-36.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-37.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-37.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-38.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-38.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-39.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-39.jpg"
           alt="Gòtic"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-41.jpg"
+          src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-41.jpg"
           alt="Gòtic"
         />
       </div>
