--- a/dia5.html
+++ b/dia5.html
@@ -51,67 +51,67 @@
       <div class="images-gallery">
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-01.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-01.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-02.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-02.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-03.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-03.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-04.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-04.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-06.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-06.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-08.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-08.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-09.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-09.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-10.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-10.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-13.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-13.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-14.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-14.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-17.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-17.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-18.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-18.jpg"
           alt="Casa Batlló"
         />
         <img
           class="open-AddImgDialog"
-          src="./img/dia 05 - 15 abril - casa batlló/dia05-19.jpg"
+          src="./img/dia 05 - 15 abril - casa batllo/dia05-19.jpg"
           alt="Casa Batlló"
         />
       </div>
