--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </a>
         <a href="dia3.html" alt="Día 3: Gòtic">
           <img
-            src="./img/dia 03 - 06 abril - gòtic (catadral.pl sant jaume.pl del rei)/dia03-01.jpg"
+            src="./img/dia 03 - 06 abril - gotic (catadral.pl sant jaume.pl del rei)/dia03-01.jpg"
             alt="Día 3: Gòtic"
           />
         </a>
@@ -57,7 +57,7 @@
         </a>
         <a href="dia5.html" alt="Día 5: Casa Batlló">
           <img
-            src="./img/dia 05 - 15 abril - casa batlló/dia05-03.jpg"
+            src="./img/dia 05 - 15 abril - casa batllo/dia05-03.jpg"
             alt="Día 5: Casa Batlló"
           />
         </a>
