--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>América en Barcelona. Videos de resumen</title>
@@ -21,54 +21,63 @@
     />
     <link rel="icon" type="image/x-icon" href="./img/bcn.ico" />
     <script src="js/load-header-footer.js" defer></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- header -->
     <header></header>
 
     <main>
-      <!-- título -->
-      <div class="day-title">
-        <div class="main-menu">
-          <a href="index.html">
-            <span class="main-menu">&times;</span>
-          </a>
+        <!-- título -->
+        <div class="day-title">
+            <div class="main-menu">
+                <a href="index.html">
+                    <span class="main-menu">&times;</span>
+                </a>
+            </div>
+            <h1>Vídeos de resumen</h1>
+            <p class="day-description-videos">
+                En este apartado hay una serie de vídeos de resumen del viaje.
+            </p>
         </div>
-        <h1>Vídeos de resumen</h1>
-        <p class="day-description-videos">
-          En este apartado hay una serie de vídeos de resumen del viaje.
-        </p>
-      </div>
-      
-      <!-- Videos -->
-      <div class="video-container">
-        <video controls>
-          <source src="./video/castellers-compressed.mov" type="video/quicktime" />
-          Tu navegador no soporta el elemento de video.
-        </video>
-        <p>Ejemplo de un castell (castillo humano) que vimos en las fiestas de la Sagrada Familia.</p>
+        
+        <!-- Videos -->
+        <div class="video-container">
+            <div class="video-wrapper">
+                <video controls>
+                    <source src="./video/castellers-compressed.mov" type="video/quicktime" />
+                    Tu navegador no soporta el elemento de video.
+                </video>
+                <p>Ejemplo de un castell (castillo humano) que vimos en las fiestas de la Sagrada Familia.</p>
+            </div>
 
-        <video controls>
-          <source src="./video/correfocs-compressed.mov" type="video/quicktime" />
-          Tu navegador no soporta el elemento de video.
-        </video>
-        <p>Resumen de un correfocs (correfuegos).</p>
+            <div class="video-wrapper">
+                <video controls>
+                    <source src="./video/correfocs-compressed.mov" type="video/quicktime" />
+                    Tu navegador no soporta el elemento de video.
+                </video>
+                <p>Resumen de un correfocs (correfuegos).</p>
+            </div>
 
-        <video controls>
-          <source src="./video/gegants-compressed.mov" type="video/quicktime" />
-          Tu navegador no soporta el elemento de video.
-        </video>
-        <p>Resumen de la diada de Gegants.</p>
+            <div class="video-wrapper">
+                <video controls>
+                    <source src="./video/gegants-compressed.mov" type="video/quicktime" />
+                    Tu navegador no soporta el elemento de video.
+                </video>
+                <p>Resumen de la diada de Gegants.</p>
+            </div>
 
-        <video controls>
-          <source src="./video/resumen-viaje-compressed.mov" type="video/quicktime" />
-          Tu navegador no soporta el elemento de video.
-        </video>
-        <p>Pequeño vídeo resumen del viaje.</p>
+            <div class="video-wrapper">
+                <video controls>
+                    <source src="./video/resumen-viaje-compressed.mov" type="video/quicktime" />
+                    Tu navegador no soporta el elemento de video.
+                </video>
+                <p>Pequeño vídeo resumen del viaje.</p>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
-     <footer></footer>
-  </body>
+    <footer></footer>
+</body>
 </html>
