--- a/videos.html
+++ b/videos.html
@@ -44,34 +44,23 @@
         <!-- Videos -->
         <div class="video-container">
             <div class="video-wrapper">
-                <video controls>
-                    <source src="./video/castellers-compressed.mov" type="video/quicktime" />
-                    Tu navegador no soporta el elemento de video.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DLczDv2iH1c?si=MAO_o_XGngHDMT0G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Ejemplo de un castell (castillo humano) que vimos en las fiestas de la Sagrada Familia.</p>
             </div>
 
             <div class="video-wrapper">
-                <video controls>
-                    <source src="./video/correfocs-compressed.mov" type="video/quicktime" />
-                    Tu navegador no soporta el elemento de video.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/usqU6qz3uDc?si=k3H8p2pGi5AA5n4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Resumen de la diada de Gegants.</p>
+
+            </div>
+
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gkOSqGQJLOc?si=nAL0Mv3zQJ4wQd11" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Resumen de un correfocs (correfuegos).</p>
             </div>
 
             <div class="video-wrapper">
-                <video controls>
-                    <source src="./video/gegants-compressed.mov" type="video/quicktime" />
-                    Tu navegador no soporta el elemento de video.
-                </video>
-                <p>Resumen de la diada de Gegants.</p>
-            </div>
-
-            <div class="video-wrapper">
-                <video controls>
-                    <source src="./video/resumen-viaje-compressed.mov" type="video/quicktime" />
-                    Tu navegador no soporta el elemento de video.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yLq4K34FP60?si=M9Vqio3_qfeVXTgq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Pequeño vídeo resumen del viaje.</p>
             </div>
         </div>
